heading overflow fix

--- a/htdocs/css/discover.css
+++ b/htdocs/css/discover.css
@@ -27,7 +27,6 @@
     transform-style: preserve-3d;
     perspective: 1000px;
     perspective-origin: 50% 50%;
-   
 }
 
 .grid-item {
@@ -37,11 +36,9 @@
     border-radius: 5px;
     border: 1px solid #CCCCCC;
     background-color: #FFFFFF;
-
     transition-property: margin-top, background-color, box-shadow;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
-
     -webkit-box-shadow: none;
     -moz-box-shadow:    none;
     box-shadow:         none;
@@ -49,13 +46,11 @@
 }
 
 .grid-item:hover {
-    /*transform: translateY(10px);*/
     background-color: #F1F1F1;
     -webkit-box-shadow: 3px 3px 16px 0px rgba(50, 50, 50, 0.75);
     -moz-box-shadow:    3px 3px 16px 0px rgba(50, 50, 50, 0.75);
     box-shadow:         3px 3px 16px 0px rgba(50, 50, 50, 0.75);
     margin-top: 20px;
-   /* transform: translateZ(12px);*/
 }
 
 .grid-item a {
@@ -66,6 +61,8 @@
 .grid-item h1{
     font-size: 17px;
     margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .grid-item h2 {
@@ -85,12 +82,9 @@
     margin-top: 13px;
     margin-bottom: 10px;
     min-height: 100px;
-/*    background-image: url('/img/graph2.png');
-    background-size: cover;*/
 }
 
 @media (min-width: 2050px) {
-
     .grid-item { 
         width: 14.6%;
         margin: 1%;
@@ -99,13 +93,11 @@
 }
 
 @media (min-width: 1650px) and (max-width: 2050px) {
-
     .grid-item { 
         width: 18%;
         margin: 1%;
     }
 }
-
 
 
 @media (min-width: 1100px) and (max-width: 1650px)  {
@@ -140,15 +132,11 @@
     }
 
     .grid-item:hover {
-        /*transform: translateY(10px);*/
         background-color: #FFFFFF;
         -webkit-box-shadow: none;
         -moz-box-shadow:    none;
         box-shadow:         none;
         margin-top: 0;
-
-
-       /* transform: translateZ(12px);*/
     }
 }
 
@@ -169,9 +157,4 @@
     color: black;
     font-size: 18px;
     text-decoration: none;
-}
-
-
-#discovery-page-dialog .container {
-    /*background-image: url('/img/bkg_blue1.jpg');*/
 }
